# decoding_biology_hackathon

./: .gitignore  README.md  generate_answers_demo.ipynb  install.sh  pyproject.toml  smolagents_demo.ipynb  start_vllm_docker.sh  upload_answers.py  vllm_demo.ipynb  vllm_in_python.ipynb
